--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <h4 class="text-uppercase mb-4">About My Site</h4>
                         <p class="lead mb-0">
                             This site is created using MIT licensed Bootstrap theme, created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            <a href="https://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
                     </div>
