--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <meta name="author" content="" />
         <title>Jakov Kristović - Software Engineer</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/untitled.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+        <link rel="manifest" href="assets/site.webmanifest">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -233,7 +237,7 @@
                         <h4 class="text-uppercase mb-4">About My Site</h4>
                         <p class="lead mb-0">
                             This site is created using MIT licensed Bootstrap theme, created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            <a href="https://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
                     </div>
