Portfolio syntax update

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-2 text-justify">Development of digital educational materials in form of manual for additional staff training in cooperation with <a href="https://carina.gov.hr/">Croatian Customs</a> office.</p>
                                     <p class="mb-2 text-justify">The purpose of the materials produced is to improve the knowledge and awareness of the trainees, in order to improve the performance of their daily work and give them a broader picture of the skills and current trends of smugglers.</p>
-                                    <p class="mb-5 text-justify">More specific details regarding the project are not given here due to the delicacy of the content itself.</p>
+                                    <p class="mb-5 text-justify">More specific details regarding the project are not given here due to the data confidentiality.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
