Contact me - default email client
Added small <div> which gives option to contact me using default email client.

--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
                             <div id="success"></div>
                             <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
                         </form>
+                        <div class="mt-5 col-md-auto">
+                            <div class="d-flex justify-content-center">
+                                <a class="btn btn-outline-dark btn-social mx-1" href="mailto:kristovic.jakov@gmail.com"><i class="far fa-fw fa-envelope"></i></a>
+                                    <span class="align-middle ml-2 lead" style="margin-top: auto; margin-bottom: auto;">Contact me using your email client</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
