--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5 rounded-circle" src="assets/img/avatar.jpg" alt="Profile image" />
+                <img class="masthead-avatar mb-5 rounded-circle" src="assets/img/avatar.jpeg" alt="Profile image" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Jakov Kristović</h1>
                 <!-- Icon Divider-->
