--- a/index.html
+++ b/index.html
@@ -145,10 +145,14 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Jakov is a Software Engineer located in Dubrovnik, Croatia. Jakov often uses <a href="https://dotnet.microsoft.com/" class="text-white font-weight-bold">.NET technologies</a> while making Desktop, Web and even Mobile applications.
-                        Also, Jakov has passion for using machine learning while developing new and interesting intelligent recommender systems, usually publicly available on his GitHub repo.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">Lately, Jakov is associated with developing projects and digital education materials for <a href="https://carina.gov.hr/" class="text-white font-weight-bold">Croatian Customs</a>, 
-                        as well as designing prototypes for applications which are focused on funding from European Union funds.</p></div>
+                    <div class="col-lg-4 ml-auto">
+                        <p class="lead">Jakov is a Software Engineer located in Dubrovnik, Croatia. Jakov often uses <a href="https://dotnet.microsoft.com/" class="text-white font-weight-bold">.NET technologies</a> for making Web applications, while using Flutter and Unity for mobile projects.</p>
+                        <p class="lead">Passionate about using machine learning while developing new and interesting intelligent recommender systems, some of which are publicly available on his GitHub repo.</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto">
+                        <p class="lead">Lately, Jakov is focused on developing next-gen AR application using Unity engine. More information on this topic will be available soon.</p>
+                        <p class="lead">Stay tuned!</p>
+                    </div>
                 </div>
                 <!-- About Section Button-->
                 <!--
