--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                         </div>
                         <div class="col-sm-7">
                             <div class="mh-portfolio-modal-img">
-                                <img src="assets/images/portfolio/passlock-disp1.PNG" alt="passlock-disp1" class="img-fluid">
+                                <img src="assets/images/portfolio/passlock-disp1.png" alt="passlock-disp1" class="img-fluid">
                                 <p>UI overview</p>
                                 <img src="assets/images/portfolio/passlock-disp2.PNG" alt="passlock-disp2" class="img-fluid">
                                 <p>UI overview #2</p>        
@@ -902,10 +902,10 @@
                                         <input name="name" class="contact-email form-control" id="L_name" type="text" placeholder="Last Name" required>
                                     </div>
                                     <div class="col-sm-12">
-                                        <input name="name" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
+                                        <input name="_replyto" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
                                     </div>
                                     <div class="col-sm-12">
-                                        <textarea class="contact-message" id="message" rows="6" placeholder="Your Message" required></textarea>
+                                        <textarea class="contact-message" id="message" name="message" rows="6" placeholder="Your Message" required></textarea>
                                     </div>
                                     <!-- Subject Button -->
                                     <div class="btn-form col-sm-12">
