--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
                                         <input name="name" class="contact-email form-control" id="L_name" type="text" placeholder="Last Name" required>
                                     </div>
                                     <div class="col-sm-12">
-                                        <input name="_replyto" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
+                                        <input name="email" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
                                     </div>
                                     <div class="col-sm-12">
                                         <textarea class="contact-message" id="message" name="message" rows="6" placeholder="Your Message" required></textarea>
