--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     <li><a href="https://www.linkedin.com/in/jakovkristovic/"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="https://github.com/TheJakov"><i class="fa fa-github"></i></a></li>
                                     <li><a href="https://www.facebook.com/jakov.kristovic"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="https://www.instagram.com/jakovk7/"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://www.instagram.com/jakovkristovic/"><i class="fa fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                                         <div class="parcial">
                                             <div class="info">
                                                 <div class="nome">C#</div>
-                                                <div class="percentagem-num">93%</div>
+                                                <div class="percentagem-num">94%</div>
                                             </div>
                                             <div class="progressBar">
                                                 <div class="percentagem" style="width: 93%;"></div>
@@ -286,25 +286,25 @@
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">Unity</div>
-                                                <div class="percentagem-num">63%</div>
+                                                <div class="nome">Flutter</div>
+                                                <div class="percentagem-num">47%</div>
                                             </div>
                                             <div class="progressBar">
                                                 <div class="percentagem" style="width: 63%;"></div>
                                             </div>
                                         </div>
-                                    </div> 
+                                    </div>
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">Flutter</div>
-                                                <div class="percentagem-num">47%</div>
+                                                <div class="nome">Unity</div>
+                                                <div class="percentagem-num">63%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 47%;"></div>
+                                                <div class="percentagem" style="width: 50%;"></div>
                                             </div>
                                         </div>
-                                    </div>                                    
+                                    </div>                                     
                                 </div>
                             </div>
                         </div>
