--- a/index.html
+++ b/index.html
@@ -374,8 +374,9 @@
                                         <div class="mh-eduyear">Aug 2020 - present</div>
                                         <span>Roles: </span>
                                         <ul class="work-responsibility">
-                                            <li><i class="fa fa-calendar">&nbsp;Oct 2021 - present</i>.NET Software Engineer</li>
-                                            <li><i class="fa fa-calendar">&nbsp;Aug 2020 - Oct 2021</i>Junior .NET Software Engineer</li>
+                                            <li><i class="fa fa-calendar">&nbsp;Apr 2022 - present</i>.NET Engineer</li>
+                                            <li><i class="fa fa-calendar">&nbsp;Oct 2021 - Apr 2022</i>.NET Full Stack Developer</li>
+                                            <li><i class="fa fa-calendar">&nbsp;Aug 2020 - Oct 2021</i>Junior .NET Full Stack Developer</li>
                                         </ul>
                                         <span>Responsibility :</span>
                                         <ul class="work-responsibility">
