Education and Work experience sections switched
Sections for Education and Work experience have been switched

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Software Development Engineer</h4>
                                 
                                 <ul>
-                                    <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><i class="fa fa-briefcase"></i><a href="https://www.autodesk.com/">AUTODESK</a></li>
+                                    <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><i class="fa fa-briefcase"></i><a href="https://www.autodesk.com/">Autodesk</a></li>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-graduation-cap"></i>Master's degree in Informatics @ <a href="https://www.foi.unizg.hr/">FOI</a></li>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i class="fa fa-envelope"></i><a href="mailto:">kristovic.jakov@gmail.com</a></li>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s"><i class="fa fa-map-marker"></i><address>Dubrovnik, Croatia</address></li>
@@ -347,31 +347,12 @@
                 <div class="container">
                     <div class="row section-separator">
                         <div class="col-sm-12 col-md-6">
-                            <div class="mh-education">
-                                 <h3 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Education</h3>
-                                <div class="mh-education-deatils">
-                                    <!-- Education Institutes-->
-                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Master's degree in Informatics From <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
-                                        <div class="mh-eduyear">2018-2020</div>
-                                        <p>Databases and Knowledge Bases - My master's thesis was on the topic of creating intelligent recommender systems using machine learning and artificial intelligence.</p>
-                                    </div>                                
-                                    <!-- Education Institutes-->
-                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>Bachelor's degree in Informational Systems <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
-                                        <div class="mh-eduyear">2015-2018</div>
-                                        <p>Informational systems - At this point I was sharping my skills to become a software engineer and do what I love the most - develop cool things which will find their purposes in real life.</p>
-                                    </div>                                
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6">
                             <div class="mh-work">
                                  <h3>Work Experience</h3>
                                 <div class="mh-experience-deatils">                                
                                     
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                                        <h4>Software Development Engineer at <a href="https://www.autodesk.com/">AUTODESK</a></h4>
+                                        <h4>Software Development Engineer at <a href="https://www.autodesk.com/">Autodesk</a></h4>
                                         <div class="mh-eduyear">Oct 2022 - present</div>
                                         <span>Responsibility :</span>
                                         <ul class="work-responsibility">
@@ -404,6 +385,25 @@
                                             <li><i class="fa fa-circle"></i>Web development</li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <div class="mh-education">
+                                 <h3 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Education</h3>
+                                <div class="mh-education-deatils">
+                                    <!-- Education Institutes-->
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
+                                        <h4>Master's degree in Informatics From <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
+                                        <div class="mh-eduyear">2018-2020</div>
+                                        <p>Databases and Knowledge Bases - My master's thesis was on the topic of creating intelligent recommender systems using machine learning and artificial intelligence.</p>
+                                    </div>                                
+                                    <!-- Education Institutes-->
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                                        <h4>Bachelor's degree in Informational Systems <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
+                                        <div class="mh-eduyear">2015-2018</div>
+                                        <p>Informational systems - At this point I was sharping my skills to become a software engineer and do what I love the most - develop cool things which will find their purposes in real life.</p>
+                                    </div>                                
                                 </div>
                             </div>
                         </div>
