Updated work experience

--- a/index.html
+++ b/index.html
@@ -354,9 +354,13 @@
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                                         <h4>Software Development Engineer at <a href="https://www.autodesk.com/">Autodesk</a></h4>
                                         <div class="mh-eduyear">Oct 2022 - present</div>
+                                        <span>Roles: </span>
+                                        <ul class="work-responsibility">
+                                            <li><i class="fa fa-calendar">&nbsp;Oct 2022 - present</i>Software Development Engineer</li>
+                                        </ul>
                                         <span>Responsibility :</span>
                                         <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>.NET development</li>
+                                            <li><i class="fa fa-circle"></i>Software development in .NET</li>
                                         </ul>
                                     </div>
 
@@ -365,7 +369,7 @@
                                         <div class="mh-eduyear">Aug 2020 - Sep 2022</div>
                                         <span>Roles: </span>
                                         <ul class="work-responsibility">
-                                            <li><i class="fa fa-calendar">&nbsp;Apr 2022 - present</i>.NET Engineer</li>
+                                            <li><i class="fa fa-calendar">&nbsp;Apr 2022 - Sep 2022</i>.NET Engineer</li>
                                             <li><i class="fa fa-calendar">&nbsp;Oct 2021 - Apr 2022</i>.NET Full Stack Developer</li>
                                             <li><i class="fa fa-calendar">&nbsp;Aug 2020 - Oct 2021</i>Junior .NET Full Stack Developer</li>
                                         </ul>
@@ -394,13 +398,13 @@
                                 <div class="mh-education-deatils">
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Master's degree in Informatics From <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
+                                        <h4>Master's degree in Informatics from <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
                                         <div class="mh-eduyear">2018-2020</div>
                                         <p>Databases and Knowledge Bases - My master's thesis was on the topic of creating intelligent recommender systems using machine learning and artificial intelligence.</p>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>Bachelor's degree in Informational Systems <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
+                                        <h4>Bachelor's degree in Informational Systems from <a href="https://www.foi.unizg.hr/">Faculty of Organization and Informatics</a></h4>
                                         <div class="mh-eduyear">2015-2018</div>
                                         <p>Informational systems - At this point I was sharping my skills to become a software engineer and do what I love the most - develop cool things which will find their purposes in real life.</p>
                                     </div>                                
