--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
                             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m a Jakov, experienced software engineer based in Dubrovnik. 
                             Skilled in Databases, C#, developing Web & Desktop applications, often using <a href="https://dotnet.microsoft.com/" class="font-weight-bold j-highlight">.NET technologies</a>.
-                            Lately, I am developing new mobile apps using Flutter.</p>
+                            Lately, I am developing new mobile apps in form of PWAs using React.</p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
                                     <li><span>C#</span></li>
@@ -175,11 +175,11 @@
                                     <li><span>.NET Framework</span></li>
                                     <li><span>.NET Core</span></li>
                                     <li><span>ASP .NET</span></li>
+                                    <li><span>React</span></li>
+                                    <li><span>PWAs</span></li>
                                     <li><span>Flutter</span></li>
-                                    <li><span>Unity</span></li>
                                     <li><span>SQL Server</span></li>
                                     <li><span>artificial intelligence</span></li>
-                                    <li><span>agumented reality</span></li>
                                 </ul>
                             </div>
                             <a href="https://www.linkedin.com/in/jakovkristovic/" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Check me out on LinkedIn<i class="fa fa-linkedin-square"></i></a>
@@ -226,8 +226,8 @@
                             <i class="fa fa-object-ungroup sky-color"></i>
                             <h3>App Development</h3>
                             <p>
-                                Developing modern mobile apps with eye-catching UI, lately focused on creating agumented reality 
-                                (AR) experiences that will allow us to manipulate the world in ways we previously only imagined.
+                                Developing modern mobile apps with eye-catching UI, lately focused on creating progressive web applications (PWAs) using React. 
+                                Combining the best features of web and mobile apps to create experiences that will allow us to manipulate the world in ways we previously only imagined.
                             </p>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">Flutter</div>
+                                                <div class="nome">React</div>
                                                 <div class="percentagem-num">63%</div>
                                             </div>
                                             <div class="progressBar">
@@ -298,7 +298,7 @@
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">Unity</div>
+                                                <div class="nome">Flutter</div>
                                                 <div class="percentagem-num">50%</div>
                                             </div>
                                             <div class="progressBar">
