Updated App development section

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                             <i class="fa fa-object-ungroup sky-color"></i>
                             <h3>App Development</h3>
                             <p>
-                                Developing modern mobile apps with eye-catching UI, lately focused on creating progressive web applications (PWAs) using React. 
-                                Combining the best features of web and mobile apps to create experiences that will allow us to manipulate the world in ways we previously only imagined.
+                                Developing modern mobile apps with eye-catching UI, by combining the best features of web and mobile apps,
+                                to create experiences that will allow us to manipulate the world in ways we previously only imagined.
                             </p>
                         </div>
                     </div>
